[gd_scene load_steps=5 format=3 uid="uid://blg6jyarvwtwp"]

[ext_resource type="Script" uid="uid://bo5k2g33sjmli" path="res://Object/key_listener.gd" id="1_4w61r"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_aiye1"]
load_path = "res://.godot/imported/btnOSU.png-1c4fe4a0cb7c6b23eca9a805b4bd0297.ctex"

[sub_resource type="Curve" id="Curve_aiye1"]
_data = [Vector2(0.00342466, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_4w61r"]
_data = [Vector2(0.00684932, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="KeyListener" type="Sprite2D"]
script = ExtResource("1_4w61r")
key_name = "space"

[node name="BtnOsu" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = SubResource("CompressedTexture2D_aiye1")

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PerfectEffect" type="CPUParticles2D" parent="."]
modulate = Color(1, 0.854902, 0.52549, 1)
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 60.0
initial_velocity_max = 250.0
scale_amount_min = 5.0
scale_amount_max = 50.0
scale_amount_curve = SubResource("Curve_aiye1")

[node name="okEffect" type="CPUParticles2D" parent="."]
modulate = Color(1, 0.854902, 0.52549, 1)
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 5.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_4w61r")

[node name="missSound" type="AudioStreamPlayer2D" parent="."]

[node name="hitSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
